Post controller test done.